--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-sm-12">
                     <h2 id="head-2">TECH UTSAV 2020</h2>
                     <h3 id="head-3">Hosted by SRM, Department of Computer Applications and Department of Computer Science, Faculty of Science and Humanities </h3>  
-                    <h4 id="head-4">REGISTRATIONS START IN</h4>
+                    <h4 id="head-4">REGISTRATIONS STARTS IN</h4>
                  </div>
 
                 <div class="row">
