Small Typography Fixes
--Updated Page Title
--Fixed Few Typos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="./assets/images/Srmseal.ico">
-    <title>Countdown timer</title>
+    <title>Tech Utsav</title>
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
@@ -24,8 +24,8 @@
             <div class="container content">
                 <div class="col-sm-12">
                     <h2 id="head-2">TECH UTSAV 2020</h2>
-                    <h3 id="head-3">Hosted by SRM, Department of Computer Applications and Department of Computer Science, Faculty of Science and Humanities </h3>  
-                    <h4 id="head-4">REGISTRATIONS STARTS IN</h4>
+                    <h3 id="head-3">Hosted by SRM IST, Department of Computer Applications and Computer Science, Faculty of Science and Humanities </h3>  
+                    <h4 id="head-4">REGISTRATION STARTS IN</h4>
                  </div>
 
                 <div class="row">
